--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					    </div>
 					    <div class="sixcol last center">
 					    	<div class="video">
-								<iframe width="100%" height="100%" src="http://www.youtube.com/v/w2fbbMfTuiU?autohide=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/w2fbbMfTuiU?autohide=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
