--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 					        <p>Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.</p>
 					    </div>
 					    <div class="sixcol last center">
+					    	<h6>Meet Coderise Class of 2012</h6>
 					    	<div class="video">
 								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/w2fbbMfTuiU?autohide=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
