--- a/index-es.html
+++ b/index-es.html
@@ -95,7 +95,7 @@
 					        <p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estar&aacute;n cubiertos.</p>
 					    </div>
 					    <div class="sixcol last center">
-					    	<h6>Meet Coderise Class of 2012</h6>
+					    	<h6>Conoce la Clase Coderise 2012</h6>
 					    	<div class="video">
 								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/w2fbbMfTuiU?autohide=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
