--- a/index-es.html
+++ b/index-es.html
@@ -67,7 +67,7 @@
 							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-								<a href="javascript:void(0)" onclick="submit();" class="btn btn-outline" name="submit" alt="PayPal - The safer, easier way to pay online!">Apoya ya!</a>
+								<a href="javascript:void(0)" onclick="submit();" class="btn btn-outline" name="submit" alt="PayPal - The safer, easier way to pay online!">Apoya ya &#9658;</a>
 
 								<!--<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Apoya ya!"/>-->
 							</form>
