--- a/comunicados.html
+++ b/comunicados.html
@@ -23,9 +23,8 @@
 						<a class="icon-list">menu</a>
 						<nav role="navigation">
 							<ul>
-								<li><a href="index-es.html">Inicio</a></li>
 								<li class="dropdown">
-									<a>
+									<a href="javascript:void(0)">
 										Acerca
 										<span class="icon-dropdown-arrow">&#9660;</span>
 									</a>
@@ -38,7 +37,7 @@
 									</ul>
 								</li>
 								<li class="dropdown active">
-									<a href="#">
+									<a href="javascript:void(0)">
 										Prensa
 										<span class="icon-dropdown-arrow">&#9660;</span>
 									</a>
