--- a/how.html
+++ b/how.html
@@ -22,9 +22,8 @@
 						<a class="icon-list">menu</a>
 						<nav role="navigation">
 							<ul>
-								<li><a href="index.html">Home</a></li>
 								<li class="dropdown active">
-									<a>
+									<a href="javascript:void(0)">
 										About
 										<span class="icon-dropdown-arrow">&#9660;</span>
 									</a>
@@ -37,7 +36,7 @@
 									</ul>
 								</li>
 								<li class="dropdown">
-									<a href="#">
+									<a href="javascript:void(0)">
 										Press
 										<span class="icon-dropdown-arrow">&#9660;</span>
 									</a>
