--- a/index-es.html
+++ b/index-es.html
@@ -22,9 +22,8 @@
 						<a class="icon-list">menu</a>
 						<nav role="navigation">
 							<ul>
-								<li class="active"><a href="index-es.html">Inicio</a></li>
 								<li class="dropdown">
-									<a>
+									<a href="javascript:void(0)">
 										Acerca
 										<span class="icon-dropdown-arrow">&#9660;</span>
 									</a>
@@ -37,7 +36,7 @@
 									</ul>
 								</li>
 								<li class="dropdown">
-									<a href="#">
+									<a href="javascript:void(0)">
 										Prensa
 										<span class="icon-dropdown-arrow">&#9660;</span>
 									</a>
