--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					    <div class="sixcol last center">
 					    	<h4>Meet Coderise Class of 2012</h4>
 					    	<div class="video" style="padding: 0;">
-								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/w2fbbMfTuiU?autohide=1&controls=2&showinfo=0" frameborder="0" allowfullscreen></iframe>
+								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/w2fbbMfTuiU?controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
